Implementado update short link, refatorado busca por text, add busca adicional pelo id
