# routes/api.php
@@ -20,4 +20,5 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 
 Route::apiResource('v1/links', ShortLinkController::class);
+Route::get('v1/links/{link}', [ShortLinkController::class, 'searchText']);
 
